fix(compass-query-bar): find filter/options editor no longer overflows beneath the options toggle COMPASS-5098 (#2459)

--- a/packages/compass-query-bar/src/components/query-option/query-option.module.less
+++ b/packages/compass-query-bar/src/components/query-option/query-option.module.less
@@ -4,9 +4,12 @@
   display: flex;
   min-height: 28px;
   padding: 4px 5px;
-  border-top: 1px solid @gray7;
   overflow: scroll;
   width: 100%;
+
+  &:not(.has-toggle) {
+    border-top: 1px solid @gray7;
+  }
 
   &::-webkit-scrollbar {
     display: none;
@@ -72,7 +75,7 @@
 
   &.has-toggle {
     padding-right: 85px;
-    width: calc(~"100% - 60px")!important;
+    width: calc(~"100% - 60px") !important;
   }
 
   // TODO: CSS-modules Code-Mirror styles in dependency repo
@@ -110,8 +113,8 @@
     }
 
     .cm-s-mongodb .CodeMirror-matchingbracket {
-        outline: 0;
-        border-bottom: 1px solid grey;
+      outline: 0;
+      border-bottom: 1px solid grey;
     }
   }
 }
