--- a/packages/compass-query-bar/src/components/options-toggle/options-toggle.module.less
+++ b/packages/compass-query-bar/src/components/options-toggle/options-toggle.module.less
@@ -1,11 +1,13 @@
 .component {
-  position: absolute;
-  top: 3px;
-  right: 5px;
+  margin-right: 5px;
+  margin-top: 3px;
   padding-left: 5px !important;
   cursor: pointer;
   border-radius: 0 9px 9px 0 !important;
   z-index: 100;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
   &.is-open {
     border-bottom-right-radius: 0 !important;
